Assignment_1/software/.metadata/.plugins/org.eclipse.cdt.ui/project1.build.log
15:50:03 **** Incremental Build of configuration Nios II for project project1 ****
make all 
Info: Building ../project1_bsp/
C:/intelFPGA/18.1/nios2eds/bin/gnu/H-x86_64-mingw32/bin/make --no-print-directory -C ../project1_bsp/
[BSP build complete]
Info: Compiling main.c to obj/default/main.o
nios2-elf-gcc -xc -MP -MMD -c -I../project1_bsp//HAL/inc -I../project1_bsp/ -I../project1_bsp//drivers/inc  -pipe -D__hal__ -DALT_NO_INSTRUCTION_EMULATION -DALT_SINGLE_THREADED    -O0 -g -Wall   -mhw-div -mhw-mul -mno-hw-mulx -mgpopt=global  -o obj/default/main.o main.c
main.c: In function 'FrequencyAnalysisTask':
main.c:103:58: error: macro "xSemaphoreGive" passed 2 arguments, but takes just 1
          xSemaphoreGive(thresholdSemaphore, portMAX_DELAY);
                                                          ^
main.c:103:10: error: 'xSemaphoreGive' undeclared (first use in this function)
          xSemaphoreGive(thresholdSemaphore, portMAX_DELAY);
          ^
main.c:103:10: note: each undeclared identifier is reported only once for each function it appears in
main.c: In function 'vCheckButtonTask':
main.c:190:5: warning: 'main' is normally a non-static function [-Wmain]
 int main(void)
     ^
main.c:196:1: error: expected declaration or statement at end of input
 }
 ^
make: *** [obj/default/main.o] Error 1

15:50:04 Build Finished (took 639ms)

